hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/dollar_this.php.exp
File "dollar_this.php", line 7, characters 16-20:
Variable `$this` is undefined, or not always defined. (Naming[2050])
File "dollar_this.php", line 7, characters 16-20:
`$this` is not bound inside expression trees (Typing[4095])
