hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/dollar_this.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

class MyClass {
  public function foo(): void {
    ExampleDsl`$this`;
  }
}
